# real-world-crypto-ml-system

./: .gitignore  Cargo.toml  Makefile  README.md  container.txt  diff.folded  local.txt  pyproject.toml  python.folded  python.perf  rust.folded
dashboards/: candles.json
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  backfill-technical-indicators.yaml
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka_ui.sh  install_prometheus.sh  install_risingwave.sh  kind-with-portmapping.yaml
deployments/dev/kind/manifests/: grafana-values.yaml  kafka-e11b.yaml  mlflow-values.yaml  prometheus-values.yaml
deployments/dev/ml-stability/: kustomization.yaml  ml-stability-cm.yaml  ml-stability-d.yaml  ml-stability-s.yaml
deployments/dev/news/: .env.kind.sample  kustomization.yaml  news-d.yaml
deployments/dev/news-sentiment/: .env.kind.sample  kustomization.yaml  news-sentiment-d.yaml
deployments/dev/prediction-api/: prediction-api-cm.yaml  prediction-api-d.yaml  prediction-api-s.yaml
deployments/dev/prediction-generator/: kustomization.yaml  prediction-generator-cm.yaml  prediction-generator-d.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/training-pipeline/: training-pipeline-cj.yaml  training-pipeline-cm.yaml  training-pipeline-j.yaml
deployments/prod/: README.MD  install_kafka.sh
deployments/prod/candles/: candles.yaml
deployments/prod/flux-system/: gotk-sync.yaml
deployments/prod/kafka/: kafka-c6c8.yaml  kafka-ui-all-in-one.yaml  kafka-ui-ingress.yaml
deployments/prod/manifests/: kafka-c6c8.yaml
deployments/prod/trades/: trades.yaml
docker/: .dockerignore  candles.Dockerfile  ml-stability.Dockerfile  news-sentiment.Dockerfile  news.Dockerfile  prediction-api-scratch.Dockerfile  prediction-api.Dockerfile  prediction-generator.Dockerfile  technical-indicators.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile  training-pipeline-optimized.Dockerfile  training-pipeline.Dockerfile
k6-tests/prediction_api/: readme.md  stress_test.js
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml
services/candles/src/candles/: config.py  main.py  settings.env
services/news/: pyproject.toml
services/news-sentiment/: pyproject.toml
services/news-sentiment/src/news_sentiment/: Makefile  config.py  curate_dataset.py  dataset.py  download_historical_news.sh  evaluate.py  main.py  metrics.py  sentiment_extractor.py
services/news-sentiment/src/news_sentiment/baml_src/: clients.baml  sentiment_scores.baml
services/news/src/news/: .envrc  config.py  main.py  news_data_source.py  news_downloader.py
services/prediction-api/: Cargo.toml  Makefile  latest_predictions.sql  rust_perf_output.txt
services/prediction-api/src/: config.rs  db.rs  main.rs
services/prediction-api/src/routes/: health.rs  predictions.rs
services/prediction_api_py/: create_latest_predictions.sql  drop_latest_predictions.sql  pyproject.toml
services/prediction_api_py/src/prediction_api_py/: __init__.py  config.py  database.py  lifespan.py  main.py  python_perf_output.txt
services/predictor/: env.local.sample  pyproject.toml  query.sql
services/predictor/mlruns/0/: meta.yaml
services/predictor/src/predictor/: config.py  data_validation.py  ml-stability.py  model_registry.py  models.py  names.py  param_space.yaml  predict.py  train.py
services/technical_indicators/: pyproject.toml
services/technical_indicators/src/technical_indicators/: candle.py  config.py  indicators.py  main.py  settings.env  table.py
services/trades/: settings.env
services/trades/src/trades/: config.py  kraken_api.py  kraken_websocket_api.py  main.py  trade.py
trades/: values.yaml
trades/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
trades/templates/tests/: test-connection.yaml
