[project]
name = "crypto-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "quixstreams>=3.16.1",
    "ruff>=0.11.13",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members=["services/trades"]
