[project]
name = "crypto-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.204.0",
    "candles",
    "databases[asyncpg]>=0.9.0",
    "fastapi>=0.116.1",
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "opik>=1.8.20",
    "pre-commit>=4.2.0",
    "predictor",
    "psycopg2-binary>=2.9.10",
    "quixstreams>=3.17.0",
    "requests>=2.32.4",
    "risingwave-py",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.42",
    "technical-indicators",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "websocket-client>=1.8.0",
]

[tool.ruff]
line-length = 88
lint.select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.uv.workspace]
members = [
    "services/candles",
    "services/technical_indicators",
    "services/predictor",
    "services/prediction_api_py",
    "services/news",
    "services/news-sentiment",
]

[tool.uv.sources]
candles = { workspace = true }
prediction_api_py ={ workspace = true }
technical-indicators = { workspace = true }
predictor = { workspace = true }
risingwave-py = { git = "https://github.com/risingwavelabs/risingwave-py" }

[dependency-groups]
dev = [
    "deptry>=0.23.1",
]

[project.optional-dependencies]
talib = [
    "ta-lib>=0.6.4",
]
