[project]
name = "prediction-api-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karim Abousselham", email = "karim.abousselham@gmail.com" }
]
requires-python = ">=3.12.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
