[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karim Abousselham", email = "karim.abousselham@gmail.com" }
]
requires-python = ">=3.12.11"
dependencies = [
    "great-expectations>=0.18.8",
    "psycopg2-binary>=2.9.10",
    "risingwave-py>=0.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
