[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karim Abousselham", email = "karim.abousselhaml@gmail.com" }
]
requires-python = ">=3.12.11"
dependencies = [
    "ta-lib>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
